task1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deployment-task1    
spec:
    replicas: 2
    selector: 
        matchLabels:
            msarch: task1
    strategy: 
        type: RollingUpdate
    template:
        metadata:
            labels:
                msarch: task1
        spec: 
            containers: 
            - name: kub-task-1
              image: klim150893/msarch:kub-task-1.0
              ports:
                - name: web
                  containerPort: 8080
              livenessProbe:
                httpGet:
                  port: 8080
                  path: /health
                initialDelaySeconds: 10
                periodSeconds: 5
                timeoutSeconds: 2
              readinessProbe:
                httpGet:
                  port: 8080
                  path: /health
                initialDelaySeconds: 1
                periodSeconds: 5
                timeoutSeconds: 2
