task1/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: service-task1
spec:
    selector:
        msarch: task1
    ports:
        - protocol: TCP
          port: 8000
          targetPort: 8080
    type: ClusterIP
