task1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-task1
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    rules:
    - host: arch.homework
      http:
          paths:
            - path: /
              pathType: Prefix
              backend: 
                service: 
                    name: service-task1
                    port: 
                      number: 8000
